# dav1d-rs

./: AGENTS.md  CHANGES.md  Cargo.toml  Makefile  README.md  build.rs  canary.py
.github/workflows/: ci.yml  release.yml
issues/closed/: 0001-add-decoder-config-settings.md  0002-add-color-metadata-enums.md  0003-add-frame-metadata-accessors.md  0004-add-hdr-metadata-accessors.md  0005-add-decoder-flush.md  0006-add-high-bit-depth-plane-accessors.md  0007-add-runtime-version-query.md  0008-add-parse-sequence-header.md  0009-add-apply-grain.md  0010-add-get-event-flags.md  0011-add-get-frame-delay.md  0012-add-get-decode-error-data-props.md
issues/pending/: 0013-add-data-wrap.md
src/: codec_info.rs  lib.rs
tests/: test_psnr.rs
