[package]
name = "shiguredo_dav1d"
version = "2026.2.0-canary.0"
edition = "2024"
rust-version = "1.88"
description = "Rust bindings for dav1d AV1 decoder"
readme = "README.md"
homepage = "https://github.com/shiguredo/dav1d-rs"
repository = "https://github.com/shiguredo/dav1d-rs"
license = "Apache-2.0"
build = "build.rs"
include = ["/LICENSE", "/README.md", "/build.rs", "/src/**/*"]

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies.dav1d]
url = "https://github.com/videolan/dav1d"
version = "1.5.3"

[dependencies]

[dev-dependencies]
shiguredo_aom = "2026.1"
shiguredo_svt_av1 = "2026.1"

[build-dependencies]
bindgen = "0.72"
shiguredo_toml = "2026.2"

[features]
source-build = []
